# ai-project

./: .gitignore  .mcp.json  CLAUDE.md  docker-compose.yml  pyproject.toml  run_python.md  task
.claude/skills/senior-frontend/scripts/: bundle_analyzer.py  component_generator.py  frontend_scaffolder.py
.github/workflows/: lint.yml
backend/: main.py  requirements.txt
db/migrations/: 001_initial_schema.sql  002_seed_risk_types.sql
examples/: versicherungsanfrage.msg
feature/: postgress
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: ResultCard.tsx  UploadForm.tsx
