[project]
name = "ai-project"
version = "0.1.0"
description = "Angebots-Erstellungs-Tool für Versicherungsvermittler"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",     # Pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "RUF",   # Ruff-specific rules
]
ignore = [
    "E501",  # line-length (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"backend/**" = ["B008"]  # FastAPI uses function calls (File, Depends, Query) in defaults

[tool.ruff.lint.isort]
known-first-party = ["quote_engine"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]
